@@ -15,12 +15,12 @@ gDigitizationGlobal(gDigiGlobal)
 void GSensitiveDetector::registerGVolumeTouchable(string name, GTouchable* gt)
 {
 	if(verbosity >= GVERBOSITY_DETAILS) {
-		G4cout << "Registering " << name << " touchable in " << GetName() << " with value: " << gt->getGTouchableId() << G4endl;
+		G4cout << "Registering " << name << " touchable in " << GetName() << " with value: " << gt->getGTouchableDescriptionString() << G4endl;
 	}
 	gTouchableMap[name] = gt;
 }
 
-
+// thread local
 void GSensitiveDetector::Initialize(G4HCofThisEvent* g4hc)
 {
 	flowMessage("Initializing GSensitiveDetector " + GetName());
@@ -32,26 +32,44 @@ void GSensitiveDetector::Initialize(G4HCofThisEvent* g4hc)
 	
 	// protecting against pluging loading failures
 	if(!gDigiLocal) {
-		flowMessage("Plugin " + GetName() + " not loaded.");
+		G4cout << GWARNING << " Plugin " << GetName() << " not loaded." << G4endl;
 	}
 }
 
 
 G4bool GSensitiveDetector::ProcessHits(G4Step* thisStep, G4TouchableHistory* g4th)
 {
+	// skip event if gDigiLocal not present?
+	if(!gDigiLocal) {
+		return false;
+	}
+
 	double depe = thisStep->GetTotalEnergyDeposit();
-	
+		
 	// decide if to proceed or skip.
 	if(skipProcessHit(depe)) {
 		return false;
 	}
+	
 
+	// PRAGMA TODO: do this only in debug mode
 	flowMessage("Processing Hits in GSensitiveDetector " + GetName());
+	
 	G4StepPoint   *preStepPoint = thisStep->GetPreStepPoint();
+	G4StepPoint   *pstStepPoint = thisStep->GetPostStepPoint();
 
+	// process touchable. if not defined by plugin, base class will return vector
+	vector<GTouchable*> thisStepProcessedTouchables = gDigiLocal->processTouchable(getGTouchable(preStepPoint->GetTouchable()), thisStep);
 	
-	G4cout << " identifier " << getGTouchable(preStepPoint->GetTouchable());
+//	G4cout << " ASD " << gDigiLocal << G4endl;
+
+	G4cout << " identifier before " << getGTouchable(preStepPoint->GetTouchable())->getGTouchableDescriptionString() << G4endl;
 	
+	for(auto gt: thisStepProcessedTouchables) {
+		G4cout << " identifier after " << gt->getGTouchableDescriptionString() << G4endl ;
+	}
+
+	// PRAGMA TODO: do this only in debug mode
 	if(verbosity == GVERBOSITY_ALL) {
 		G4cout << " Energy deposited this step: " << depe << G4endl;
 	}
