@@ -1,3 +1,7 @@
+10/31/17
+ - registering sensitive detector in GDetectorConstruction::ConstructSDandField() despite g4 documentation
+ - 
+
 10/19/17
  - added registerGVolumeTouchable to fill touchable map in gsensitivedetector
  - adding gTouchable constructor and registering in the sensitive detector map
